--- a/app/src/main/res/layout/fragment_stat.xml
+++ b/app/src/main/res/layout/fragment_stat.xml
@@ -12,6 +12,6 @@
         android:layout_height="wrap_content"
         android:textSize="50sp"
         android:gravity="center"
-        android:text="Hello" />
+        android:text="DCMMM" />
 
 </FrameLayout>
