working add task.

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -65,8 +65,8 @@
 
         <ImageView
             android:id="@+id/status_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_gravity="center"
             android:contentDescription="Chungus image"
             android:src="@drawable/red_apple"
@@ -132,9 +132,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+ TASK"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@id/tv_task_list"
-        app:layout_constraintTop_toBottomOf="@id/task_guide_line" />
+        app:layout_constraintEnd_toStartOf="@+id/podomoro_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
