--- a/app/src/main/res/layout/item_user_task.xml
+++ b/app/src/main/res/layout/item_user_task.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:maxHeight="200dp"
-    android:padding="20dp">
+    android:padding="20dp"
+    >
 
     <View
         android:id="@+id/v_focus_indicator"
