--- a/app/src/main/res/layout/fragment_update_task_dialog.xml
+++ b/app/src/main/res/layout/fragment_update_task_dialog.xml
@@ -13,7 +13,7 @@
         android:id="@+id/dialog_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add New Task"
+        android:text="Update Task"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
