--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/fmHome"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="16dp"
     tools:context=".ui.home.HomeFragment">
     <!-- Segmented Buttons for Phases -->
@@ -110,18 +115,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CLICK!!"
+        app:layout_constraintBottom_toTopOf="@id/task_guide_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time_left"
-        app:layout_constraintBottom_toTopOf="@id/task_guide_line"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/tv_time_left" />
 
     <TextView
         android:id="@+id/tv_task_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Task Lisk"
+        android:text="Tasks"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
         app:layout_constraintStart_toStartOf="parent"
@@ -132,20 +136,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+ TASK"
-        app:layout_constraintEnd_toStartOf="@+id/podomoro_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
+        app:layout_constraintEnd_toEndOf="@+id/rclv_task_list"
+        app:layout_constraintTop_toTopOf="@+id/task_guide_line" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rclv_task_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="250dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="38dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_task_add"
+        app:layout_constraintTop_toBottomOf="@+id/task_guide_line"
         tools:itemCount="3"
         tools:listitem="@layout/item_user_task" />
 
@@ -158,3 +162,4 @@
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
