room database migration learn. structure data with flows correctly

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,160 +6,181 @@
     android:layout_width="match_parent">
 
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/fmHome"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="16dp"
-    tools:context=".ui.home.HomeFragment">
-    <!-- Segmented Buttons for Phases -->
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/phase_toggle_group"
-        android:layout_width="370dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.9"
-        app:selectionRequired="true"
-        app:singleSelection="true">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/phase_pomodoro"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Pomodoro Focus"
-            android:textSize="14sp"
-            app:cornerRadius="8dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/phase_short_break"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Short Break"
-            android:textSize="14sp"
-            app:cornerRadius="8dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/phase_long_break"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Long Break"
-            android:textSize="14sp"
-            app:cornerRadius="8dp" />
-
-    </com.google.android.material.button.MaterialButtonToggleGroup>
-
-
-    <FrameLayout
-        android:id="@+id/fl_progress_container"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phase_toggle_group">
-
-        <ImageView
-            android:id="@+id/status_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:contentDescription="Chungus image"
-            android:src="@drawable/red_apple"
-            app:layout_constraintHorizontal_bias="1.0" />
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/status_progress_bar"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_gravity="center"
-            android:indeterminate="false"
-            android:progress="100"
-            app:indicatorColor="@android:color/holo_red_light"
-            app:indicatorSize="200dp"
-            app:trackThickness="8dp" />
-    </FrameLayout>
-
-    <TextView
-        android:id="@+id/tv_time_left"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:fontFamily="monospace"
-        android:gravity="center"
-        android:letterSpacing="0.05"
-        android:shadowColor="@color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="2"
-        android:textSize="60sp"
-        android:textStyle="bold"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fl_progress_container"
-        tools:text="25:00" />
-
-    <Button
-        android:id="@+id/podomoro_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CLICK!!"
-        app:layout_constraintBottom_toTopOf="@id/task_guide_line"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time_left" />
-
-    <TextView
-        android:id="@+id/tv_task_list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tasks"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/task_guide_line" />
-
-    <Button
-        android:id="@+id/btn_task_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+ TASK"
-        app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
-        app:layout_constraintEnd_toEndOf="@+id/rclv_task_list"
-        app:layout_constraintTop_toTopOf="@+id/task_guide_line" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rclv_task_list"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fmHome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:maxHeight="250dp"
-        android:layout_marginTop="38dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/task_guide_line"
-        tools:itemCount="3"
-        tools:listitem="@layout/item_user_task" />
+        android:padding="16dp"
+        tools:context=".ui.home.HomeFragment">
+        <!-- Segmented Buttons for Phases -->
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/phase_toggle_group"
+            android:layout_width="370dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.9"
+            app:selectionRequired="true"
+            app:singleSelection="true">
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/task_guide_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="377dp" />
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/phase_pomodoro"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Pomodoro Focus"
+                android:textSize="14sp"
+                app:cornerRadius="8dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/phase_short_break"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Short Break"
+                android:textSize="14sp"
+                app:cornerRadius="8dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/phase_long_break"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Long Break"
+                android:textSize="14sp"
+                app:cornerRadius="8dp" />
+
+        </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <FrameLayout
+            android:id="@+id/fl_progress_container"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/phase_toggle_group">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/status_lottie"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:scaleType="centerInside"
+                app:lottie_autoPlay="false"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/tomato_lottie" />
+
+            <com.google.android.material.progressindicator.CircularProgressIndicator
+                android:id="@+id/status_progress_bar"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:indeterminate="false"
+                android:progress="100"
+                app:indicatorColor="@android:color/holo_red_light"
+                app:indicatorSize="200dp"
+                app:trackThickness="8dp" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/tv_time_left"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:fontFamily="monospace"
+            android:gravity="center"
+            android:letterSpacing="0.05"
+            android:shadowColor="@color/black"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:textSize="60sp"
+            android:textStyle="bold"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fl_progress_container"
+            tools:text="25:00" />
+
+        <Button
+            android:id="@+id/podomoro_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CLICK!!"
+            app:layout_constraintBottom_toTopOf="@+id/focus_task_guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_time_left" />
+
+        <TextView
+            android:id="@+id/tv_task_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tasks"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/task_list_guide_line" />
+
+        <Button
+            android:id="@+id/btn_task_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+ TASK"
+            app:layout_constraintBottom_toTopOf="@+id/rclv_task_list"
+            app:layout_constraintEnd_toEndOf="@+id/rclv_task_list"
+            app:layout_constraintTop_toTopOf="@+id/task_list_guide_line" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rclv_task_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="38dp"
+            android:maxHeight="250dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/task_list_guide_line"
+            tools:itemCount="3"
+            tools:listitem="@layout/item_user_task" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/focus_task_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="404dp" />
+        <include
+            android:id="@+id/focused_task_view"
+            layout="@layout/item_user_task"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toBottomOf="@id/focus_task_guideline"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/task_list_guide_line"
+            android:layout_marginTop="16dp" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/task_list_guide_line"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="514dp"
+            app:layout_constraintTop_toBottomOf="@id/focused_task_view" />
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
