--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/miHome" android:title="Home" android:icon="@drawable/ic_clock"/>
-    <item android:id="@+id/miStat" android:title="Reports" android:icon="@drawable/ic_stats"/>
-    <item android:id="@+id/miSettings" android:title="Settings" android:icon="@drawable/ic_settings"/>
-
+    <item
+        android:id="@+id/miHome"
+        android:icon="@drawable/ic_clock"
+        android:title="Home" />
+    <item
+        android:id="@+id/miStat"
+        android:icon="@drawable/ic_stats"
+        android:title="Reports" />
+    <item
+        android:id="@+id/miSettings"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings" />
 </menu>
